# Deux

./: .env  .env.example  Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/auth/: config.rs  routes.rs
src/api/profile/: config.rs  mod.rs  routes.rs
src/api/user/: config.rs  mod.rs  routes.rs
src/cache/: kvstore.rs
src/constants/: messages.rs
src/crypto/: hash.rs  jwt.rs
src/db/: mongo.rs
src/errors/: server.rs
src/extractors/: auth.rs  login.rs  profile.rs
src/middleware/: auth.rs  mod.rs  redirect.rs
src/middleware/helpers/: bearer.rs
src/models/: user.rs
src/server/: config.rs  server.rs
src/shared/: state.rs
tests/: auth.rs  profile.rs  user.rs
