[package]
name = "deux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
dotenv = "0.15.0"
validator = { version = "0.16.0", features = ["derive"] }
argonautica = { version = "0.2.0", features = ["simd"] }

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime"]