[package]
name = "deux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
dotenv = "0.15.0"
validator = { version = "0.16.0", features = ["derive"] }
argonautica = { version = "0.2.0", features = ["simd"] }
hmac = "0.12.1"
sha2 = "0.10.6"
jwt = "0.16.0"
tower = "0.4.13"
futures = "0.3.26"
regex = "1.7.1"
lazy_static = "1.4.0"
hyper = "0.14.24"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime"]